// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcSidebar Has navigation and main content 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <div class="oc-sidebar-main-content oc-mt">Securely access and share data from everywhere and any device</div>
    <!---->
  </div>
</div>
`;

exports[`OcSidebar Sets fixed position 1`] = `
<div class="oc-sidebar oc-sidebar-fixed">
  <div class="oc-sidebar-content-wrapper">
    <oc-button-stub type="button" size="medium" arialabel="Close sidebar" variation="raw" justifycontent="center" gapsize="medium" color="default" class="oc-sidebar-button-close">
      <oc-icon-stub name="close" arialabel="icon" type="span" size="medium" variation="system" aria-hidden="true"></oc-icon-stub>
    </oc-button-stub>
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays a logo image if its source is specified 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo">
    <oc-img-stub src="https://owncloud.com/wp-content/uploads/2020/06/oc-logo-1c-1.svg" alt="ownCloud" class="oc-sidebar-logo-img"></oc-img-stub>
    </router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays nav items 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <!---->
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`OcSidebar displays upperContent and footer slots 1`] = `
<div class="oc-sidebar">
  <div class="oc-sidebar-content-wrapper">
    <!---->
    <router-link-stub tag="a" to="/" class="oc-sidebar-logo"><span class="oc-sidebar-logo-text">ownCloud</span></router-link-stub>
    <div class="oc-sidebar-upper-content"><strong class="upper-slot">Files app</strong></div>
    <nav class="oc-sidebar-nav">
      <ul>
        <oc-sidebar-nav-item-stub target="/" icon="home" class="oc-sidebar-nav-item">
          Home
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub target="/files" icon="folder" class="oc-sidebar-nav-item">
          All files
        </oc-sidebar-nav-item-stub>
        <oc-sidebar-nav-item-stub active="true" target="/shared" icon="share" class="oc-sidebar-nav-item">
          Shared files
        </oc-sidebar-nav-item-stub>
      </ul>
    </nav>
    <!---->
    <div class="oc-sidebar-footer oc-mt"><small slot="footer" class="footer-slot">Made by ownClouders</small></div>
  </div>
</div>
`;
